<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>bbear.coen6761</groupId>
	<artifactId>proj</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>proj</name>
	<url>http://maven.apache.org</url>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<lombok.version>1.18.8</lombok.version>
		<slf4j.version>2.0.7</slf4j.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<reporting>
    <plugins>
        <plugin>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-maven</artifactId>
            <version>LATEST</version>
            <reportSets>
                <reportSet>
                    <reports>
                        <report>report</report>
                    </reports>
                </reportSet>
            </reportSets>
        </plugin>
    </plugins>
</reporting>

	
	<dependencies>
	
	    <!-- junit 5, unit test -->
	    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>5.9.3</version>
		    <scope>test</scope>
		</dependency>
	
	    
	    <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-runner -->
		<dependency>
		    <groupId>org.junit.platform</groupId>
		    <artifactId>junit-platform-runner</artifactId>
		    <version>1.9.3</version>
		    <scope>test</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>${slf4j.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>${slf4j.version}</version>
		</dependency>


	</dependencies>

	<build>
	<plugins>
		<plugin>
    <groupId>org.pitest</groupId>
    <artifactId>pitest-maven</artifactId>
    <version>2.2.0</version>
    
    
    
    
    
    <configuration>
        <targetClasses>
            <param>bbear.coen6761.proj.</param>
        </targetClasses>
        
    </configuration>
		</plugin>
	
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.22.2</version>
		<configuration>
			<argLine>
				--illegal-access=permit
			</argLine>
			<testFailureIgnore>true</testFailureIgnore>
			<forkCount>2</forkCount>
			<reuseForks>true</reuseForks>
			<argLine>${surefireArgLine}</argLine> 
		</configuration>
	</plugin>
	
	<plugin>
		<groupId>org.jacoco</groupId>
		<artifactId>jacoco-maven-plugin</artifactId>
		<version>0.8.7</version>
		<executions>
			<execution>
				<id>default-prepare-agent</id>
				<goals>
					<goal>prepare-agent</goal>
				</goals>
				<configuration>
					<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
					<propertyName>surefireArgLine</propertyName>
				</configuration>
			</execution>
			<execution>
				<id>default-report</id>
				<phase>test</phase>
				<goals>
					<goal>report</goal>
				</goals>
				<configuration>
					<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
					<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
				</configuration>
			</execution>
			<execution>
				<id>default-check</id>
				<goals>
					<goal>check</goal>
				</goals>
				<configuration>
					<rules>
						<rule>
							<element>BUNDLE</element>
							<limits>
								<limit>
									<counter>COMPLEXITY</counter>
									<value>COVEREDRATIO</value>
									<minimum>0.70</minimum>
								</limit>
							</limits>
						</rule>
					</rules>
				</configuration>
			</execution>
		</executions>
	</plugin>
	
	</plugins>
	</build>
</project>
